--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,7 +4,7 @@ $font-main:'Proxima Nova Lt',
 sans-serif;
 $font-pnextrabold: 'Proxima Nova Th';
 $font-pnregular: 'Proxima Nova Rg';
-$font-size: 16px;
+$font-bebas: 'Bebas Neue';
 $ul: 1340px;
 $xl: 1200px;
 $lg: 992px;
