--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,8 +14,8 @@
 @import "sections/section-whyme/whyme-list";
 @import "sections/section-whyme/whyme";
 @import "sections/section-whyme/whyme-title";
-@import "sections/section-common";
-@import "sections/section-nav";
-@import "sections/section-main";
-@import "sections/section-info";
+@import "sections/section-services/services";
+@import "sections/section-services/servisec-title";
+@import "sections/section-services/servises-list";
+@import "sections/section-services/services-item";
 @import "footer/footer";
