--- a/assets/scss/sections/section-services/_services.scss
+++ b/assets/scss/sections/section-services/_services.scss
@@ -10,7 +10,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
-    z-index: -2;
+    // z-index: -2;
     &__overlay {
         background: linear-gradient(180deg, rgba(0, 78, 134, 0.9) 0%, rgba(10, 65, 104, 0.9) 100%);
         position: absolute;
@@ -19,15 +19,19 @@
         right: 0;
         bottom: 0;
         overflow: hidden;
-        z-index: -1;
+        // z-index: -1;
     }
     &__body {
+        position: relative;
+        z-index: 1;
         display: flex;
         flex-direction: column;
         padding-top: $gap*5;
         margin-bottom: $gap*3;
     }
     &__progressbar {
+        position: relative;
+        z-index: 1;
         height: 4px;
         width: 100%;
         background: linear-gradient(270deg, #FEE040 0%, rgba(254, 224, 64, 0) 100%);
