--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -4,7 +4,7 @@
     min-height: 768px;
     color: $color-light;
     background-color: transparent;
-    background-image: url(../img/sean-pollock-203658-unsplash.jpg);
+    background-image: url(../img/bg_header.jpg);
     background-position: center top;
     background-size: cover;
     background-repeat: no-repeat;
