--- a/assets/scss/sections/section-services/_services-item.scss
+++ b/assets/scss/sections/section-services/_services-item.scss
@@ -14,6 +14,7 @@
         height: 180px;
         overflow: hidden;
         border-radius: 3px;
+        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.534);
     }
     h4 {
         font-family: $font-pnregular;
@@ -36,7 +37,12 @@
     }
     &__link-more {
         a {
-            display: block;
+            transition: all 0.3s linear;
+        }
+        a:hover {
+            color: $color-light;
+            font-weight: bold;
+            text-shadow: 2px 2px 5px black;
         }
         font-family: $font-bebas;
         font-size: 20px;
