--- a/assets/scss/sections/section-services/_services.scss
+++ b/assets/scss/sections/section-services/_services.scss
@@ -5,7 +5,7 @@
 .services {
     position: relative;
     min-height: 753px;
-    background-image: url(../img/bgservises.png);
+    background-image: url(../img/bgservises.jpg);
     background-position: center top;
     background-size: cover;
     background-repeat: no-repeat;
