--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -6,7 +6,7 @@ html {
     height: 100%;
     font-size: 18px;
     font-family: $font-main;
-    overflow-y: scroll;
+    //overflow-x: scroll;
 }
 
 body {
