--- a/assets/scss/sections/section-services/_services.scss
+++ b/assets/scss/sections/section-services/_services.scss
@@ -1,7 +1,3 @@
-/*.section-services {
-    position: relative;
-}*/
-
 .services {
     position: relative;
     min-height: 753px;
@@ -10,7 +6,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
-    // z-index: -2;
+    padding-bottom: $gap*4;
     &__overlay {
         background: linear-gradient(180deg, rgba(0, 78, 134, 0.9) 0%, rgba(10, 65, 104, 0.9) 100%);
         position: absolute;
@@ -19,7 +15,6 @@
         right: 0;
         bottom: 0;
         overflow: hidden;
-        // z-index: -1;
     }
     &__body {
         position: relative;
@@ -35,6 +30,6 @@
         height: 4px;
         width: 100%;
         background: linear-gradient(270deg, #FEE040 0%, rgba(254, 224, 64, 0) 100%);
-        margin-bottom: $gap*5;
+        //margin-bottom: $gap*5;
     }
 }
