--- a/assets/scss/_skin.scss
+++ b/assets/scss/_skin.scss
@@ -1,9 +1,10 @@
 //$color-primary: #2d3651;
 $color-accent: #FEE040;
-//$color-highlight: #d53d27;
-//@use ;: #637588;
+$color-highlight: #E5E5E5;
+$color-beg: #505050;
 $color-gray: #333333;
 $color-gray-light: #707070;
 $color-gray-dark:#151515;
 $color-light:#FFFFFF;
 $color-beg: #F5F5F5;
+$colot-text: #505050;
