--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -18,4 +18,6 @@
 @import "sections/section-services/services-title";
 @import "sections/section-services/services-list";
 @import "sections/section-services/services-item";
+@import "sections/section-steps/step-header";
+@import "sections/section-steps/step-one";
 @import "footer/footer";
