--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1184,6 +1184,49 @@ h1 {
   font-weight: bold;
   text-shadow: 2px 2px 5px black;
 }
+
+.steps__header {
+  text-align: center;
+  min-height: 360px;
+}
+.steps__container {
+  padding-top: 109px;
+  padding-bottom: 80px;
+}
+.steps__container p {
+  font-family: "Gilroy", serif;
+  font-size: 20px;
+  line-height: 140%;
+  font-weight: bold;
+  color: #505050;
+  margin-top: 28px;
+  margin-left: 450px;
+  margin-right: 450px;
+}
+.steps__gradient {
+  background: -webkit-gradient(linear, left top, left bottom, from(#60b6ff), to(rgba(0, 78, 134, 0.8)));
+  background: -o-linear-gradient(top, #60b6ff 0%, rgba(0, 78, 134, 0.8) 100%);
+  background: linear-gradient(180deg, #60b6ff 0%, rgba(0, 78, 134, 0.8) 100%);
+}
+.steps__gradient h2 {
+  font-family: "Bebas Neue";
+  font-size: 80px;
+  line-height: 64px;
+  letter-spacing: 5px;
+  background: white;
+  mix-blend-mode: screen;
+  margin: 0;
+}
+
+.step-one {
+  min-height: 441px;
+  background-color: maroon;
+}
+.step-one__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 @media (max-width: 1339.8px) and (min-width: 1200px) {
   .header-menu__left {
     width: 26%;
