--- a/assets/scss/sections/section-services/_services.scss
+++ b/assets/scss/sections/section-services/_services.scss
@@ -23,6 +23,9 @@
         flex-direction: column;
         padding-top: $gap*5;
         margin-bottom: $gap*2;
+        @include sm {
+            padding-top: $gap*3.5;
+        }
     }
     &__progressbar {
         position: relative;
