--- a/assets/scss/sections/section-steps/_step-one.scss
+++ b/assets/scss/sections/section-steps/_step-one.scss
@@ -2,6 +2,122 @@
     min-height: 441px;
     &__container {
         display: flex;
+        justify-content: center;
+        align-items: center;
+        @include xl {
+            max-width: 1200px;
+            flex-direction: column;
+        }
     }
-    background-color: maroon;
+    &__slider {
+        width: 50%;
+        display: flex;
+        justify-content: flex-end;
+        @include xl {
+            width: 100%;
+            justify-content: center;
+            margin-bottom: 40px;
+            margin-top: -20px;
+        }
+    }
+    &__main {
+        background-color: $color-beg;
+        min-height: 441px;
+        width: 50%;
+        background-color: $color-beg;
+        padding-top: 78px;
+        padding-bottom: 80px;
+        padding-left: 70px;
+        @include xl {
+            width: 100%;
+            justify-content: center;
+            padding-right: 70px;
+        }
+    }
+}
+
+.main-one {
+    max-width: 503px;
+    @include xl {
+        margin: 0 auto;
+    }
+    &__content {
+        max-width: 460px;
+        margin-bottom: 32px;
+    }
+    &__review {
+        display: flex;
+        position: relative;
+    }
+    &__title {
+        display: flex;
+        align-items: center;
+        @include sm {
+            flex-direction: column;
+            text-align: center;
+            gap: $gap;
+        }
+        span {
+            font-family: $font-pnextrabold;
+            font-weight: bold;
+            font-size: 16px;
+            line-height: 144%;
+            letter-spacing: 3px;
+            text-transform: uppercase;
+            color: $color-gray-dark;
+            background-color: $color-accent;
+            padding: 2px 8px;
+            margin-right: 19px;
+        }
+        h4 {
+            font-family: $font-pnextrabold;
+            font-size: 24px;
+            line-height: 142%;
+            letter-spacing: -0.6px;
+            font-weight: bold;
+            color: $color-gray-dark;
+            margin: 0;
+        }
+    }
+    &__text {
+        font-family: $font-main;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 144%;
+        letter-spacing: -0.5px;
+        color: $color-gray;
+        opacity: 0.7;
+    }
+    &__avatar {
+        position: absolute;
+        top: -22px;
+        left: -41px;
+    }
+    &__review-text {
+        margin-left: 100px;
+        &_quote {
+            font-family: $font-main;
+            font-size: 16px;
+            line-height: 150%;
+            letter-spacing: -0.4px;
+            color: $colot-text;
+            opacity: 0.7;
+            font-style: italic;
+            margin: 0;
+            margin-bottom: 20px;
+        }
+        &_name {
+            font-family: $font-pnextrabold;
+            font-size: 16px;
+            line-height: 162%;
+            font-weight: bold;
+            letter-spacing: -0.6px;
+            color: $color-gray-dark;
+            opacity: 0.7;
+            margin: 0;
+            span {
+                text-transform: uppercase;
+            }
+        }
+    }
 }
