--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
 /* Document
    ========================================================================== */
@@ -1233,21 +1234,32 @@ h1 {
 }
 .step-one__slider {
   width: 50%;
+  min-width: 0;
+  min-height: 441px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.step-one__slider img {
+  max-width: 960px;
+  width: 100%;
+  height: 441px;
 }
 .step-one__main {
   background-color: #F5F5F5;
-  min-height: 441px;
+  min-height: 442px;
   width: 50%;
   background-color: #F5F5F5;
   padding-top: 78px;
   padding-bottom: 80px;
   padding-left: 70px;
+  margin-bottom: 3px;
 }
 
 .main-one {
@@ -1333,6 +1345,63 @@ h1 {
 .main-one__review-text_name span {
   text-transform: uppercase;
 }
+
+/* Слайдер */
+.slider {
+  position: relative;
+}
+
+/* Слайдер запущен */
+/* Слайдер с точками */
+/* Ограничивающая оболочка */
+.slick-list {
+  overflow: hidden;
+}
+
+/* Лента слайдов */
+.slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* Слайд */
+/* Слайд активный (показывается) */
+/* Слайд основной */
+/* Слайд по центру */
+/* Клонированный слайд */
+/* Точки (булиты) */
+.slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  top: 86%;
+  left: calc(50% - 120px);
+}
+.slick-dots li {
+  list-style: none;
+}
+.slick-dots li button {
+  font-size: 0;
+  background-color: #FFFFFF;
+  width: 35px;
+  height: 4px;
+  margin-right: 5px;
+  border: 0;
+  border-radius: 2px;
+}
+
+.slick-active button {
+  background-color: #FEE040 !important;
+}
+
 @media (max-width: 1339.8px) and (min-width: 1200px) {
   .header-menu__left {
     width: 26%;
@@ -1352,6 +1421,7 @@ h1 {
     max-width: 70%;
   }
 }
+
 @media (max-width: 1199.8px) {
   .step-one__container {
     max-width: 1200px;
@@ -1367,6 +1437,7 @@ h1 {
             justify-content: center;
     margin-bottom: 40px;
     margin-top: -20px;
+    max-width: 960px;
   }
   .step-one__main {
     width: 100%;
@@ -1379,6 +1450,7 @@ h1 {
     margin: 0 auto;
   }
 }
+
 @media (max-width: 1199.8px) and (min-width: 992px) {
   .header-menu__left {
     width: 35%;
@@ -1426,6 +1498,7 @@ h1 {
     max-width: 75%;
   }
 }
+
 @media (max-width: 991.8px) {
   .whyme-list__container h3 {
     text-align: center;
@@ -1433,7 +1506,12 @@ h1 {
   .whyme img {
     display: none;
   }
+  .step-one__slider img {
+    max-height: 441px;
+    height: 100%;
+  }
 }
+
 @media (max-width: 991.8px) and (min-width: 768px) {
   .header-menu__left {
     width: 40%;
@@ -1507,7 +1585,11 @@ h1 {
     margin: 0 auto;
     max-width: 85%;
   }
+  .step-one__slider {
+    margin-top: -60px;
+  }
 }
+
 @media (max-width: 767.8px) {
   h1 {
     width: 100%;
@@ -1671,6 +1753,13 @@ h1 {
     max-width: 100%;
   }
 }
+
+@media (max-width: 767.8px) and (min-width: 576px) {
+  .step-one__slider {
+    margin-top: -120px;
+  }
+}
+
 @media (max-width: 575.8px) {
   .header-content__offer-btn {
     min-width: 260px;
@@ -1692,6 +1781,9 @@ h1 {
   .steps__gradient h2 {
     font-size: 70px;
   }
+  .step-one__slider {
+    margin-top: -220px;
+  }
   .main-one__title {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1701,6 +1793,7 @@ h1 {
     gap: 20px;
   }
 }
+
 @media (max-width: 349.8px) {
   .steps__gradient h2 {
     font-size: 55px;
