--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,4 +20,5 @@
 @import "sections/section-services/services-item";
 @import "sections/section-steps/step-header";
 @import "sections/section-steps/step-one";
+@import "sections/section-steps/step-slider";
 @import "footer/footer";
