--- a/assets/scss/_skin.scss
+++ b/assets/scss/_skin.scss
@@ -6,5 +6,5 @@ $color-gray: #333333;
 $color-gray-light: #707070;
 $color-gray-dark:#151515;
 $color-light:#FFFFFF;
-$color-beg: #F5F5F5;
+$color-beglight: #F5F5F5;
 $colot-text: #505050;
