--- a/assets/scss/sections/section-whyme/_whyme-list.scss
+++ b/assets/scss/sections/section-whyme/_whyme-list.scss
@@ -1,6 +1,6 @@
     .whyme-list {
         width: 50%;
-        background-color: $color-beg;
+        background-color: $color-beglight;
         font-family: $font-pnregular;
         font-size: 24px;
         line-height: 34px;
