--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
 /* Document
    ========================================================================== */
@@ -1231,9 +1230,11 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 .step-one__slider {
   width: 50%;
+  max-width: 960px;
   min-width: 0;
   min-height: 441px;
   display: -webkit-box;
@@ -1252,9 +1253,10 @@ h1 {
   height: 441px;
 }
 .step-one__main {
-  background-color: #F5F5F5;
+  background-color: #505050;
   min-height: 442px;
   width: 50%;
+  max-width: 960px;
   background-color: #F5F5F5;
   padding-top: 78px;
   padding-bottom: 80px;
@@ -1264,6 +1266,14 @@ h1 {
 
 .main-one {
   max-width: 503px;
+}
+.main-one__bg {
+  min-height: 441px;
+  width: 100%;
+  background-color: #F5F5F5;
+  position: absolute;
+  top: 0;
+  z-index: -1;
 }
 .main-one__content {
   max-width: 460px;
@@ -1346,31 +1356,20 @@ h1 {
   text-transform: uppercase;
 }
 
-/* Слайдер */
 .slider {
   position: relative;
 }
 
-/* Слайдер запущен */
-/* Слайдер с точками */
-/* Ограничивающая оболочка */
 .slick-list {
   overflow: hidden;
 }
 
-/* Лента слайдов */
 .slick-track {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-/* Слайд */
-/* Слайд активный (показывается) */
-/* Слайд основной */
-/* Слайд по центру */
-/* Клонированный слайд */
-/* Точки (булиты) */
 .slick-dots {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1402,6 +1401,95 @@ h1 {
   background-color: #FEE040 !important;
 }
 
+.step-two__header {
+  min-height: 323px;
+  text-align: center;
+  max-width: 840px;
+  padding-top: 78px;
+  margin: 0 auto;
+}
+.step-two__title span {
+  font-family: "Proxima Nova Th";
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 144%;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #151515;
+  background-color: #FEE040;
+  padding: 3px 6px;
+}
+.step-two__title h4 {
+  font-family: "Proxima Nova Th";
+  font-size: 24px;
+  line-height: 142%;
+  letter-spacing: -0.6px;
+  color: #151515;
+  margin-top: 20px;
+  margin-bottom: 25px;
+}
+.step-two__text {
+  font-family: "Proxima Nova Lt", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 156%;
+  letter-spacing: -0.5px;
+  color: #333333;
+  opacity: 0.7;
+}
+
+.step-two__slider {
+  min-height: 417px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.step-two__slider-bg {
+  background-color: #FFFFFF;
+  width: 340px;
+  height: 60px;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+.step-two__slider-item {
+  position: relative;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 340px;
+  height: 417px;
+  background: #F5F5F5;
+  border-radius: 2px;
+  padding-right: auto;
+  padding-left: auto;
+  margin-right: 20px;
+}
+.step-two__slider-img {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  z-index: 2;
+}
+.step-two__slider-title {
+  font-family: "Proxima Nova Rg";
+  font-size: 16px;
+  line-height: 137%;
+  text-align: center;
+  letter-spacing: -0.5px;
+  color: #151515;
+  opacity: 0.7;
+  font-weight: bold;
+  margin-top: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 260px;
+}
 @media (max-width: 1339.8px) and (min-width: 1200px) {
   .header-menu__left {
     width: 26%;
@@ -1421,7 +1509,6 @@ h1 {
     max-width: 70%;
   }
 }
-
 @media (max-width: 1199.8px) {
   .step-one__container {
     max-width: 1200px;
@@ -1441,16 +1528,19 @@ h1 {
   }
   .step-one__main {
     width: 100%;
+    max-width: 1200px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     padding-right: 70px;
   }
+  .main-one__bg {
+    display: none;
+  }
   .main-one {
     margin: 0 auto;
   }
 }
-
 @media (max-width: 1199.8px) and (min-width: 992px) {
   .header-menu__left {
     width: 35%;
@@ -1498,7 +1588,6 @@ h1 {
     max-width: 75%;
   }
 }
-
 @media (max-width: 991.8px) {
   .whyme-list__container h3 {
     text-align: center;
@@ -1511,7 +1600,6 @@ h1 {
     height: 100%;
   }
 }
-
 @media (max-width: 991.8px) and (min-width: 768px) {
   .header-menu__left {
     width: 40%;
@@ -1589,7 +1677,6 @@ h1 {
     margin-top: -60px;
   }
 }
-
 @media (max-width: 767.8px) {
   h1 {
     width: 100%;
@@ -1753,13 +1840,11 @@ h1 {
     max-width: 100%;
   }
 }
-
 @media (max-width: 767.8px) and (min-width: 576px) {
   .step-one__slider {
-    margin-top: -120px;
+    margin-top: -135px;
   }
 }
-
 @media (max-width: 575.8px) {
   .header-content__offer-btn {
     min-width: 260px;
@@ -1793,7 +1878,6 @@ h1 {
     gap: 20px;
   }
 }
-
 @media (max-width: 349.8px) {
   .steps__gradient h2 {
     font-size: 55px;
