--- a/assets/scss/sections/section-steps/_step-two-slider.scss
+++ b/assets/scss/sections/section-steps/_step-two-slider.scss
@@ -1,49 +1,81 @@
-.step-two {
-    &__slider {
-        min-height: 417px;
-        display: flex;
-        align-items: flex-end;
-        //   overflow: hidden;
-        &-bg {
-            background-color: $color-light;
-            width: 340px;
-            height: 60px;
-            position: absolute;
-            top: 0;
-            z-index: 1;
-        }
-        &-item {
+    .step-two {
+        &__slider {
+            min-height: 417px;
             position: relative;
-            flex-shrink: 0;
-            width: 340px;
-            height: 417px;
-            background: $color-beglight;
-            border-radius: 2px;
-            padding-right: auto;
-            padding-left: auto;
-            margin-right: $gap;
-        }
-        &-img {
-            position: absolute;
-            // top: -16.5%;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 2;
-        }
-        &-title {
-            font-family: $font-pnregular;
-            font-size: 16px;
-            line-height: 137%;
-            text-align: center;
-            letter-spacing: -0.5px;
-            color: $color-gray-dark;
-            opacity: 0.7;
-            font-weight: bold;
-            margin-top: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            max-width: 260px;
+            //   overflow: hidden;
+            &-bg {
+                background-color: $color-light;
+                width: 340px;
+                height: 60px;
+                position: absolute;
+                top: 0;
+                z-index: 1;
+            }
+            &-item {
+                position: relative;
+                flex-shrink: 0;
+                width: 340px;
+                height: 417px;
+                background: $color-beglight;
+                border-radius: 2px;
+                padding-right: auto;
+                padding-left: auto;
+                margin-right: $gap;
+            }
+            &-img {
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                z-index: 2;
+            }
+            &-title {
+                font-family: $font-pnregular;
+                font-size: 16px;
+                line-height: 137%;
+                text-align: center;
+                letter-spacing: -0.5px;
+                color: $color-gray-dark;
+                opacity: 0.7;
+                font-weight: bold;
+                margin-top: 340px;
+                margin-left: auto;
+                margin-right: auto;
+                max-width: 260px;
+            }
         }
     }
-}
+    /* Стрелка */
+    
+    .slick-arrow {
+        position: absolute;
+        font-size: 0;
+        top: 50%;
+        z-index: 10;
+        width: 30px;
+        height: 60px;
+        @include md {
+            width: 20px;
+            height: 40px;
+        }
+    }
+    
+    .slick-prev {
+        left: 5px;
+        background-color: transparent;
+        background-image: url(../img/arrow-prev.png);
+        background-position: center top;
+        background-size: cover;
+        background-repeat: no-repeat;
+        border: 0px;
+    }
+    
+    .slick-next {
+        right: 5px;
+        background-color: transparent;
+        background-image: url(../img/arrow-next.png);
+        background-position: center top;
+        background-size: cover;
+        background-repeat: no-repeat;
+        border: 0px;
+    }
