--- a/assets/scss/sections/section-steps/_step-one.scss
+++ b/assets/scss/sections/section-steps/_step-one.scss
@@ -7,7 +7,7 @@
         position: relative;
         @include xl {
             max-width: 1200px;
-            flex-direction: column;
+            flex-direction: column-reverse;
         }
     }
     &__slider {
@@ -28,19 +28,22 @@
             }
         }
         @include lg-md {
-            margin-top: -60px;
+            margin-top: 20px;
         }
         @include md-sm {
-            margin-top: -135px;
+            margin-top: -50px;
         }
-        @include sm {
+        @include sm-xs {
+            margin-top: -160px;
+        }
+        @include xs {
             margin-top: -220px;
         }
         @include xl {
             width: 100%;
             justify-content: center;
-            margin-bottom: 40px;
-            margin-top: -20px;
+            margin-bottom: 20px;
+            margin-top: 20px;
             max-width: 960px;
         }
     }
